--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,14 @@
       </div>
       <div class="card-footer d-flex justify-content-between align-items-center">
         <strong>${{ "%.2f"|format(item.price) }}</strong>
-        <a class="btn btn-sm btn-primary" href="{{ url_for('product_detail', item_id=item.id) }}">View</a>
+        <div>
+          <a class="btn btn-sm btn-primary" href="{{ url_for('product_detail', item_id=item.id) }}">View</a>
+          <form action="{{ url_for('add_to_cart', item_id=item.id) }}" method="post" style="display:inline;">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+            <input type="hidden" name="qty" value="1">
+            <button class="btn btn-sm btn-success">Add to cart</button>
+          </form>
+        </div>
       </div>
     </div>
   </div>
