--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -2,7 +2,11 @@
 {% block content %}
 <div class="row">
   <div class="col-md-6">
-    <img src="{{ url_for('static', filename='images/' ~ item.image) }}" class="img-fluid" alt="{{ item.name }}">
+    {% if item.image %}
+      <img src="{{ url_for('static', filename='images/' ~ item.image) }}" class="img-fluid" alt="{{ item.name }}">
+    {% else %}
+      <img src="{{ url_for('static', filename='images/default.svg') }}" class="img-fluid" alt="{{ item.name }}">
+    {% endif %}
   </div>
   <div class="col-md-6">
     <h2>{{ item.name }}</h2>
@@ -13,7 +17,14 @@
     <a class="btn btn-primary" href="{{ url_for('edit_item', item_id=item.id) }}">Edit</a>
 
     <form action="{{ url_for('remove_item', item_id=item.id) }}" method="post" class="d-inline" onsubmit="return confirm('Delete this item?');">
+      <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
       <button class="btn btn-danger">Delete</button>
+    </form>
+
+    <form action="{{ url_for('add_to_cart', item_id=item.id) }}" method="post" class="mt-3 d-inline-flex align-items-center">
+      <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+      <input type="number" name="qty" value="1" min="1" style="width:80px; margin-right:8px;">
+      <button class="btn btn-success" type="submit">Add to cart</button>
     </form>
   </div>
 </div>
